new text border around "Textquelle"

--- a/Jagdausflug.HTML
+++ b/Jagdausflug.HTML
@@ -18,23 +18,19 @@
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
-    <div class="row">
-      <div class="main">
-        <h2>Ein Bild aus dieser Zeit </h2>
-        <h5>Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika</h5>
-        <a id="Bild-1">
-          <img src="img/Jagdausflug.png" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" id="Bild-1" width="100%">
-        </a>
-        <div class="Text-info">
-          <p class="pinfo">Das Bild wurde 1910 von einem unbekanntem Fotografen geschossen. <br> Auf dem Bild sieht man einen «Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika». So wurde auch das Bild genannt. Die Anordnung der Personen ist wie folgt; die Deutschen im Vordergrund sowie auf der Draisine. Der Afrikaner steht im Hintergrund des Bildes. Diese Anordnung spiegelt das Machtverhältnis zwischen den Deutschen und den Ostafrikanern dar. Die deutschen Offiziere und Gouverneure haben die Macht über Ostafrika, deshalb stehen sie auch im Vordergrund. Der Ostafrikaner befindet sich aufgrund seiner sozialen Stellung im Hintergrund. Er wird von den Deutschen als unwichtig oder minderwertig angesehen. Die Ostafrikaner hatten keine Stimme, wurden von der Kolonialmacht unterdrückt und als Menschen zweiter Klasse angesehen. <br>
-            <br> Ein weiteres Detail das zu beachten ist, ist das die Frau auf der Draisine sitzt. Die Frau hatte kein wirkliches Sagen im Vergleich zu den Männern ihrer Nation.
-          </p>
-        </div>
+    <div class="main">
+      <h2>Ein Bild aus dieser Zeit </h2>
+      <h5>Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika</h5>
+      <a id="Bild-1">
+        <img src="img/Jagdausflug.png" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" id="Bild-1" width="100%">
+      </a>
+      <div class="Text-info">
+        <p>Das Bild wurde 1910 von einem Begleiter der Jagdtruppe in Ostafrika aufgenommen. Es zeigt einen «Jagdausflug per Draisine auf der Mittelbahn in Deutsch-Ostafrika». </p>
+        <h3>Welche Machtverhältnisse sind auf dem Foto zu sehen? </h3>
+        <p>Die Anordnung der Personen auf dem Bild spiegelt das Machtverhältnis zwischen Deutschland und Ostafrika wider. Die deutschen Offiziere und Gouverneure stehen im Vordergrund und sitzen auf der Draisine, während der Afrikaner im Hintergrund des Bildes zu sehen ist. Dies zeigt, dass die Deutschen die Macht über Ostafrika hatten und die Ostafrikaner als unwichtig und minderwertig ansahen. Es spiegelt zudem auch die sozialdarwinistische Prägung des Kolonialismus wider, bei der die Afrikaner als Menschen zweiter Klasse behandelt wurden. Dies kann man auch im Interview mit einem Zwangsarbeiter wiedererkennen. Man bemerkt auch das die deutsche Frau auf der Draisine sitzt. Im Vergleich zu den Männern ihrer Nation hatte sie jedoch kein wirkliches Mitspracherecht. Trotzdem hatte sie eine höhere Stellung als der Afrikaner.</p>
+        <h3>Welche Rolle speilt die Körpersprache in diesem Foto? </h3>
+        <p>In diesem Foto spielt die Mimik und Körperhaltung der deutschen Jäger eine grosse Rolle und ist vielaussagend. Die Körpersprache allein zeigt uns wie die Machtverhältnisse in dieser Gruppe sind; Die Deutschen posieren stolz und selbstbewusst auf dem Foto, in Uniform und Waffen. Diese Merkmale sind ein Zeichen für Macht. Im Gegensatz dazu steht der schüchterne Afrikaner im Hintergrund und trägt einfache Kleidung. Man bemerkt ihn kaum.  </p>
       </div>
-        <div>
-          <canvas id="myChart"></canvas>
-        </div>
-        <div id="map" style="height:30em;"></div>
-      </div>
+    </div>
   </body>
 </html>
