--- a/Karte.html
+++ b/Karte.html
@@ -16,5 +16,8 @@
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
-    <img src="img/Karte-Maji-Maji.png" alt="Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet" width="100%">
+    <div class="main">
+      <img src="img/Karte-Maji-Maji.png" alt="Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet" width="100%">
+    </div>
+  </body>
 </html>
