--- a/Mommsen.html
+++ b/Mommsen.html
@@ -16,5 +16,8 @@
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
-    <img src="img/Daten.png" alt="Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts" width="100%">
+    <div class="main">
+      <img src="img/Daten.png" alt="Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts" width="100%">
+    </div>
+  </body>
 </html>
