--- a/Quellen.html
+++ b/Quellen.html
@@ -22,7 +22,7 @@
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right active">Quellen</a>
     </div>
-    <div>
+    <div class="main">
       <h2 class="Quellen">Quellen</h2>
       <table id="table_id" class="display">
         <thead>
