--- a/Zwangsarbeit.html
+++ b/Zwangsarbeit.html
@@ -19,13 +19,18 @@
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
-    <div>
+    <div class="main">
       <h2>Wie haben die Einheimischen den Maji-Maji Krieg beziehungsweise die Kolonialzeit wahrgenommen?</h2>
-      <img src="img/Aussagen_Zwangsarbeiter.png" alt="Aussage eines Zwangsarbeiters aus dem Jahr 1897" id="#Bild-1" width="100%">
+      <img src="img/Aussagen_Zwangsarbeiter.png" alt="Aussage eines Zwangsarbeiters aus dem Jahr 1897" class="border" id="#Bild-1" width="100%">
       <div class="pi">
-        <p class="pi">Diese Textquelle stammt von einem ostafrikanischen Zwangsarbeiter. Dieser wurde von einem Reporter befragt, der diesen Text aufgeschrieben hat. Der Zwangsarbeiter war tätig am Eisenbahnbau unter der Macht von Deutschland. Die Quelle ist 1897 entstanden und wurde 2005 (wieder)veröffentlicht. Der Befragte nimmt keine Stellung zur über ihm herrschende Kolonialmacht an. Jedoch kann man erkennen das der Befragte sehr unter der deutschen Aufsicht und Macht gelitten hat. Es wird berichtet wie er und die einheimischen Zwangsarbeiter geschlagen und ausgepeitscht wurden ehe sie einen Fehler machten oder aufhörten zu arbeiten. Der befragte Ostafrikaner fühlt sich verbündet mit den anderen Einheimischen, er bezeichnet sich als Teil von ihnen. Das sieht man am folgenden Zitat; „Wir, die Zwangsarbeiter“ (ebd. Zeile 1). Ausserdem mussten die Jumben ihre Männer strafen. Deswegen kann man in diesem Fall von zuteils von einer (partiellen) indirekten Herrschaft sprechen. Jedoch nicht ganz denn trotzdem haben die Deutschen die Macht vor Ort übernommen und über Ostafrika geherrscht. </p>
-        <h2>Welche Haltung nimmt der Autor zum Kolonialismus im Allgemeinen, zu dieser Kolonie im Speziellen ein?</h2>
-        <p class="pi"> Welche Haltung nimmt er gegenüber den Einheimischen ein? Der Zwangsarbeiter berichtet, wie die Aufseher mit den Zwangsarbeitern umgegangen sind. Die Arbeiter wurden geschlagen und gepeitscht sollten sie aufhören zu arbeiten oder einen Fehler machen. Der Berichtende erlebt den Kolonialismus sehr brutal sowie negativ. Es wird nicht erwähnt, was er über die deutschen Kolonialherren denkt. Jedoch kann man sagen er sowie viele andere Zwangsarbeiter unter der Kolonialmacht litten, deswegen kann man in diesem Fall von zuteils von einer (partiellen) indirekten Herrschaft sprechen. Jedoch nicht ganz denn trotzdem haben die Deutschen die Macht vor Ort übernommen und über Ostafrika geherrscht.</p>
+        <p class="pi">Das Interview stammt von einem ostafrikanischen Zwangsarbeiter im Jahr 1897, der während des Baus der Eisenbahn in Ostafrika unter deutscher Kolonialherrschaft tätig war. Der Text wurde von einem Reporter verfasst und 2005 veröffentlicht.  
+
+          <h3> Wie steht der Zwangsarbeiter zur Kolonialmacht</h3> 
+          <p>Obwohl der Befragte keine direkte Stellungnahme zur über ihm herrschenden Kolonialmacht annimmt, wird deutlich, dass er unter der deutschen Macht und Aufsicht leidet. Er berichtet davon, wie er und andere einheimische Zwangsarbeiter geschlagen und ausgepeitscht wurden, wenn sie einen Fehler machten oder aufhörten zu arbeiten. </p>
+          <h3> Welche Machtverhältnisse sind in diesem Interview zu bemerken? </h3>
+          <p> Der befragte Ostafrikaner fühlt sich mit den anderen Einheimischen verbunden und bezeichnet sich als Teil von ihnen. Dies zeigt sich in dem Zitat: “Wir, die Zwangsarbeiter“ (Becker 2005, S. 44f, Zeile 1). Ausserdem mussten die Jumben ihre Volksgenossen bestrafen, sollten diese einen Fehler machen. Das gibt den Anschein auf eine informelle Herrschaft, jedoch wurden Jumben von den Deutschen Gouverneuren kontrolliert und haben vor Ort komplett die Kontrolle übernommen.</p>  
+          <h3> Ist hier der Fall von Sozialdarwinismus? </h3>
+          <p> Das Vorgehen der Deutschen war durch Sozialdarwinismus geprägt. Im Interview kann man erkennen wie die Afrikaner als Menschen zweiter Klasse angesehen und behandelt werden. Ausschließlich sie mussten die schwere und dreckige Arbeit verrichten. Deutschland hat Ostafrika und seine Bewohner ausgebeutet und unterdrückt. Der befragte Zeuge erlebte den Kolonialismus als brutal und äußert sich negativ darüber.  </p>
       </div>
     </div>
   </body>
