corrected some smaller gramatical mistakes

--- a/Zwangsarbeit.html
+++ b/Zwangsarbeit.html
@@ -30,7 +30,7 @@
           <h3> Welche Machtverhältnisse sind in diesem Interview zu bemerken? </h3>
           <p> Der befragte Ostafrikaner fühlt sich mit den anderen Einheimischen verbunden und bezeichnet sich als Teil von ihnen. Dies zeigt sich in dem Zitat: “Wir, die Zwangsarbeiter“ (Becker 2005, S. 44f, Zeile 1). Ausserdem mussten die Jumben ihre Volksgenossen bestrafen, sollten diese einen Fehler machen. Das gibt den Anschein auf eine informelle Herrschaft, jedoch wurden Jumben von den Deutschen Gouverneuren kontrolliert und haben vor Ort komplett die Kontrolle übernommen.</p>  
           <h3> Ist hier der Fall von Sozialdarwinismus? </h3>
-          <p> Das Vorgehen der Deutschen war durch Sozialdarwinismus geprägt. Im Interview kann man erkennen wie die Afrikaner als Menschen zweiter Klasse angesehen und behandelt werden. Ausschließlich sie mussten die schwere und dreckige Arbeit verrichten. Deutschland hat Ostafrika und seine Bewohner ausgebeutet und unterdrückt. Der befragte Zeuge erlebte den Kolonialismus als brutal und äußert sich negativ darüber.  </p>
+          <p> Das Vorgehen der Deutschen war durch Sozialdarwinismus geprägt. Im Interview kann man erkennen, wie die Afrikaner als Menschen zweiter Klasse angesehen und behandelt werden. Sie mussten ausschliesslich die schwere und dreckige Arbeit verrichten. Deutschland hat Ostafrika und seine Bewohner ausgebeutet und unterdrückt. Der befragte Zeuge erlebte den Kolonialismus als brutal und äußert sich negativ darüber.  </p>
       </div>
     </div>
   </body>
