values in form changed, image width defined in CSS etc

--- a/Jagdausflug.HTML
+++ b/Jagdausflug.HTML
@@ -22,7 +22,7 @@
       <h2>Ein Bild aus dieser Zeit </h2>
       <h5>Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika</h5>
       <a id="Bild-1">
-        <img src="img/Jagdausflug.png" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" id="Bild-1" width="100%">
+        <img src="img/Jagdausflug.png" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" id="Bild-2" class="image-w">
       </a>
       <div class="Text-info">
         <p>Das Bild wurde 1910 von einem Begleiter der Jagdtruppe in Ostafrika aufgenommen. Es zeigt einen «Jagdausflug per Draisine auf der Mittelbahn in Deutsch-Ostafrika». </p>
