--- a/Mommsen.html
+++ b/Mommsen.html
@@ -17,7 +17,7 @@
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
     <div class="main">
-      <img src="img/Daten.png" alt="Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts" width="100%">
+      <img src="img/Daten.png" alt="Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts" class="image-w">
     </div>
   </body>
 </html>
