--- a/Quellen.html
+++ b/Quellen.html
@@ -41,7 +41,7 @@
             <td>
               <a href="index.html#Bild-1">Kriegslager in der Boma von Mahenge</a>
               <br>
-              <img src="img/MajiMaji.png" alt="Bild Maji Maji Krieg" width="100px">
+              <img src="img/MajiMaji.png" alt="Bild Maji Maji Krieg" width="100">
             </td>
             <td>2010</td>
             <td>Unbekannt</td>
@@ -53,7 +53,7 @@
             <td>
               <a href="Zwangsarbeit.html#Bild-1">Aussage eines Zwangsarbeiters aus dem Jahr 1897</a>
               <br>
-              <img src="img/Aussagen_Zwangsarbeiter.png" alt="Aussagen Zwangsarbeiter" width="100px">
+              <img src="img/Aussagen_Zwangsarbeiter.png" alt="Aussagen Zwangsarbeiter" width="100">
             </td>
             <td>2005</td>
             <td>Becker, F./Beez,J.</td>
@@ -64,7 +64,7 @@
             <td>Daten</td>
             <td>
               <a href="Mommsen.html">Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts <br>
-                <img src="img/Daten.png" alt="Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts" width="100px">
+                <img src="img/Daten.png" alt="Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts" width="100">
               </a>
             </td>
             <td>1977</td>
@@ -77,7 +77,7 @@
             <td>
               <a href="Karte.html"> Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet</a>
               <br>
-              <img src="img/Karte.png" alt="Karte-Maji-Maji" width="100px">
+              <img src="img/Karte.png" alt="Karte-Maji-Maji" width="100">
             </td>
             <td>2010</td>
             <td>unbekannt</td>
@@ -87,9 +87,9 @@
 		  <tr>
 			<td>Text & Bild</td>
             <td>
-              <a href="Jagdausflug.HTML#Bild-1">Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910</a>
+              <a href="Jagdausflug.HTML#Bild-2">Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910</a>
               <br>
-              <img src="img/Jagdausflug.png" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" width="100px">
+              <img src="img/Jagdausflug.png" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" width="100">
             </td>
             <td>2005</td>
             <td>Becker, F./Beez,J.</td>
