--- a/Zwangsarbeit.html
+++ b/Zwangsarbeit.html
@@ -21,7 +21,7 @@
     </div>
     <div class="main">
       <h2>Wie haben die Einheimischen den Maji-Maji Krieg beziehungsweise die Kolonialzeit wahrgenommen?</h2>
-      <img src="img/Aussagen_Zwangsarbeiter.png" alt="Aussage eines Zwangsarbeiters aus dem Jahr 1897" class="border" id="#Bild-1" width="100%">
+      <img src="img/Aussagen_Zwangsarbeiter.png" alt="Aussage eines Zwangsarbeiters aus dem Jahr 1897" class="border image-w" id="#Bild-1">
       <div class="pi">
         <p class="pi">Das Interview stammt von einem ostafrikanischen Zwangsarbeiter im Jahr 1897, der während des Baus der Eisenbahn in Ostafrika unter deutscher Kolonialherrschaft tätig war. Der Text wurde von einem Reporter verfasst und 2005 veröffentlicht.  
 
