--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.2/dist/medium-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/openlayers@4.6.5/dist/ol.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/openlayers@4.6.5/dist/ol.css" type="text/css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/openlayers@4.6.5/dist/ol.css" type="text/css" rel="stylesheet">
     <script src="script.js"></script>
     <title>Deutsch-Ostafrika</title>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
       <h2>Generelle Informationen zur Kolonialzeit und dem Maji-Maji Krieg in Deutsch-Ostafrika </h2>
       <h5>Title description, Dec 7, 2017</h5>
       <a>
-        <img src="img/MajiMaji.png" id="Bild-1" width="100%" alt="Kriegslager in der Boma von Mahenge">
+        <img src="img/MajiMaji.png" id="Bild-1" class="image-w" alt="Kriegslager in der Boma von Mahenge">
       </a>
       <div class="Text-info">
         <p class="pi">Deutsch-Ostafrika wurde 1884 von der deutschen Kolonialmacht erobert und gegründet. Schon seit der Eroberung kam es zu Aufständen, welche aber meistens niedergeschlagen wurden. Jedoch eskalierte die Situation 1907, als es schliesslich zum Maji-Maji Krieg kam, bei dem sich 20 Stämme gegen die Deutschen vereinigten, als Widerstandsaktion.<br><br>
@@ -41,7 +41,7 @@
           Die Deutschen nahmen keine Rücksicht auf die Kultur der Afrikaner. Beispielsweise bauten sie die Produkte an, die der Kolonialmacht nutzen anstatt der Produkte, die die Afrikaner benötigten.  </p>
         <h2>Video Völermord und Kolonialismus</h2>
         <p>Für zusätzlichen Kontext ist hier noch ein Video zur Kolonialzeit und Völkermord eingebettet.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/5ObdahQg0-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5ObdahQg0-g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
       </div>
       <h2>Grenzgebiet Maji-Maji Krieg</h2>
