--- a/Karte.html
+++ b/Karte.html
@@ -17,7 +17,7 @@
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
     <div class="main">
-      <img src="img/Karte-Maji-Maji.png" alt="Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet" width="100%">
+      <img src="img/Karte-Maji-Maji.png" alt="Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet" class="image-w">
     </div>
   </body>
 </html>
