added header elements that were missing on some docs

--- a/Jagdausflug.HTML
+++ b/Jagdausflug.HTML
@@ -13,7 +13,7 @@
     </div>
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="Jagdausflug.HTML" class="active">Ein Bild zur Kolonialzeit</a>
+      <a href="Jagdausflug.html" class="active">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
