--- a/Karte.html
+++ b/Karte.html
@@ -3,6 +3,8 @@
   <head>
     <title>Deutsch-Ostafrika</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="header">
@@ -11,7 +13,7 @@
     </div>
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
+      <a href="Jagdausflug.html">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
