--- a/Quellen.html
+++ b/Quellen.html
@@ -17,7 +17,7 @@
     </div>
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
+      <a href="Jagdausflug.html">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right active">Quellen</a>
