--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="navbar">
       <a href="index.html" class="active">Home</a>
-      <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
+      <a href="Jagdausflug.html">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
