--- a/Zwangsarbeit.html
+++ b/Zwangsarbeit.html
@@ -14,7 +14,7 @@
     </div>
     <div class="navbar">
       <a href="index.html">Home</a>
-      <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
+      <a href="Jagdausflug.html">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html" class="active">Aussagen eines Zwangsarbeiters</a>
       <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
