found the culprit for negative website checker

--- a/Quellen.html
+++ b/Quellen.html
@@ -87,7 +87,7 @@
           <tr>
             <td>Text & Bild</td>
             <td>
-              <a href="Jagdausflug.HTML#Bild-2">Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910</a>
+              <a href="Jagdausflug.html#Bild-2">Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910</a>
               <br>
               <img src="img/Jagdausflug.png" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" width="100">
             </td>
