added Video source etc

--- a/Quellen.html
+++ b/Quellen.html
@@ -96,6 +96,18 @@
             <td>Geschichte Lernen 134</td>
             <td>5</td>
           </tr>
+          <tr>
+            <td>Video</td>
+            <td>
+              <a href="index.html#vid">Völkermord in den deutschen Kolonien</a>
+              <br>
+              <img src="img/Video.jpg" alt="Jagdausflug per Draisine auf der Mittellandbahn in Deutsch-Ostafrika, um 1910" width="100">
+            </td>
+            <td>2018</td>
+            <td>Terra X History</td>
+            <td>-</td>
+            <td>youtube.com</td>
+          </tr>
         </tbody>
       </table>
     </div>
