--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <br> Die deutsche Kolonialmacht erzwang ihre Herrschaft durch Gewalt. Dies lässt sich anhand der Gefängnisstrafen und Bestrafung bei jeder Missachtung der Anweisungen erkennen. In Deutsch-Ostafrika handelte es sich um eine formelle Herrschaft. Die deutschen Gouverneure und Beamten übernahmen die Herrschaft über die Ostafrikaner sowie deren Jumben. (Jumben sind eine Art Bürgermeister der afrikanischen Dörfer). Dies konnten sie durch Krieg und Gewalt durchsetzen. <br>
           <br> Die Deutschen nahmen keine Rücksicht auf die Kultur der Afrikaner. Beispielsweise bauten sie die Produkte an, die der Kolonialmacht nutzen anstatt der Produkte, die die Afrikaner benötigten.
         </p>
-        <h2>Video Völermord und Kolonialismus</h2>
+        <h2>Video Völkermord und Kolonialismus</h2>
         <p>Für zusätzlichen Kontext ist hier noch ein Video zur Kolonialzeit und Völkermord eingebettet.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/5ObdahQg0-g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5ObdahQg0-g" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="vid"></iframe>
       </div>
       <h2>Grenzgebiet Maji-Maji Krieg</h2>
       <div id="map" style="height:30em;"></div>
