added description chart

--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
         <li>Die gelben Dreiecke sind Berge</li>
         <li>In schwarz mit "fetter" Schrift sind Siedlungsgebiete gekennzeichnet</li>
       </ul>
+      <h3>Grafik Nationaleinkommen Deutsches Reich</h3>
       <div>
         <canvas id="myChart"></canvas>
       </div>
+      
+      <p>In dieser Grafik kann man beobachten, wie das Deutsche Reich von der Ausbeutung von Ostafrika  in der Kolonialzeit profitiert haben.</p>
     </div>
   </body>
 </html>
